[tool.poetry]
name = "tablefill"
version = "0.1.1"
description = "Excel模板数据填充,快速应对Web项目数据导入"
license= "MIT"
authors = ["柒意 <396667207@qq.com>"]
readme = "README.md"
homepage = "https://gitee.com/zy7y/tablefill"
repository = "https://github.com/zy7y/tablefill"
keywords = ["excel", "data", "test"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
xlrd = "1.2.0"
Faker = "^8.14.0"
xlutils = "^2.0.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fill = "tablefill.cli:app"
